# bin2nlp

./: .dockerignore  .env copy.template  .env.development  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT_RESET_PROTOCOL.md  DEPLOYMENT.md  DOCUMENTATION_ARCHITECTURE_UPDATE_TASKS.md  Dockerfile  README.md  REDIS_ANALYSIS_CLEANUP_TASKS.md  RESUME_COMMANDS.txt  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  format_json.py  k8s-deployment.yaml  pyproject.toml  pytest.ini  requirements.txt  run_local_dev.sh  ssh-keygen-local-phi4-translation-10.json  ssh-keygen-local-phi4-translation-617.json  ssh-keygen-openai-gpt4-translation-617.json  test_admin_endpoints.sh  test_binary.elf  test_redis_encoding.py  test_section_9_comprehensive.py
!xcc/tasks/: 000_MASTER_TASKS|Decompilation_Service.md  990_CTASKS|Purge_Focused_Analysis.md  994_TASKS|API_ENDPOINT_FIX.md
!xcc/tdds/: 001_FTDD|Phase1_Integrated_System.md
!xcc/tids/: 001_FTID|Phase1_Integrated_System.md
.env-bin2nlp/: pyvenv.cfg
.housekeeping/: QUICK_RESUME.md  README.md  resume_20250818_001126.md  resume_session_20250816_230133.md  resume_session_20250816_230853.md  resume_session_20250816_231143.md  resume_session_20250816_231511.md  resume_session_20250816_231645.md  resume_session_20250817_000458.md  resume_session_20250817_004440.md  resume_session_20250817_020750.md  resume_session_20250817_032350.md  resume_session_20250817_051020.md  resume_session_20250817_104916.md  resume_session_20250817_124607.md  resume_session_20250817_140233.md  resume_session_20250817_185511.md  resume_session_20250817_203648.md  resume_session_20250818_024728.md  resume_session_20250818_033448.md  resume_session_20250818_033656.md  resume_session_20250818_040350.md  resume_session_20250818_051505.md  resume_session_20250818_052123.md  resume_session_20250818_093911.md  resume_session_20250818_100322.md  resume_session_20250818_103211.md  resume_session_20250818_110951.md  resume_session_20250818_161823.md  resume_session_20250818_200129.md  resume_session_20250818_202806.md  resume_session_20250818_222005.md  resume_session_20250818_235754.md  resume_session_20250819_014448.md  resume_session_20250819_084447.md  resume_session_20250819_091238.md  resume_session_20250821_043032.md  resume_session_20250823_113516.md  snapshot_20250818_001126.json  transcript_20250818_001126.md
.housekeeping/archived_dev_tools/: test_file_storage_system.py
.housekeeping/dev-protocols/: CONSOLIDATION_TEST_PLAN.md  PROJECT_STATUS.md
.housekeeping/snapshots/: session_20250816_230133.json  session_20250816_230853.json  session_20250816_231143.json  session_20250816_231511.json  session_20250816_231645.json  session_20250817_000458.json  session_20250817_004440.json  session_20250817_020750.json  session_20250817_032350.json  session_20250817_051020.json  session_20250817_104916.json  session_20250817_124607.json  session_20250817_140233.json  session_20250817_185511.json  session_20250817_203648.json  session_20250818_024728.json  session_20250818_033448.json  session_20250818_033656.json  session_20250818_040350.json  session_20250818_051505.json  session_20250818_052123.json  session_20250818_093911.json  session_20250818_100322.json  session_20250818_103211.json  session_20250818_110951.json  session_20250818_161823.json  session_20250818_200129.json  session_20250818_202806.json  session_20250818_222005.json  session_20250818_235754.json  session_20250819_014448.json  session_20250819_084447.json  session_20250819_091238.json  session_20250821_043032.json  session_20250823_113516.json
.housekeeping/transcripts/session_20250821_043032/: CLAUDE.md  pyproject.toml  session_report.md
.housekeeping/transcripts/session_20250821_043032/src/api/middleware/: __init__.py
.housekeeping/transcripts/session_20250821_043032/src/api/routes/: admin.py  decompilation.py
.housekeeping/transcripts/session_20250821_043032/src/cache/: base.py
.housekeeping/transcripts/session_20250821_043032/src/core/: circuit_breaker.py  config.py  metrics.py
.housekeeping/transcripts/session_20250821_043032/src/models/analysis/: basic_results.py  config.py
.housekeeping/transcripts/session_20250821_043032/src/models/api/: __init__.py
0xcc/adrs/: 000_PADR|bin2nlp.md
0xcc/instruct/: 999_Scratch.md
0xcc/prds/: 000_PPRD|bin2nlp.md  001_FPRD|Binary_Decompilation_Engine.md  002_FPRD|RESTful_API_Interface.md
0xcc/spec/: 050_Developer_Coding_S&Ps.md  051_Architect_Designing_S&Ps.md
0xcc/tasks/: 000_MASTER_TASKS|Decompilation_Service.md  001_FTASKS|Phase1_Integrated_System.md  002_FTASKS|Phase2A_LLM_Translation.md  991_CTASKS|Purge_REDIS_and_Analyis.md  994_TASKS|API_ENDPOINT_FIX.md  999_COMPREHENSIVE_TEST_PLAN|Production_Validation.md
0xcc/tdds/: 001_FTDD|Phase1_Integrated_System.md
adrs/: 000_PADR|bin2nlp.md
config/: nginx.conf  redis.conf
database/: schema.sql
docs/: API_USAGE_EXAMPLES.md  DOCKER_DEPLOYMENT.md  LLM_PROVIDER_GUIDE.md  Micelaneous_Junk.md  Parking Lot.md  TRANSLATION_QUALITY_GUIDE.md  Z_PSM_SCRATCH.md  api-documentation-summary.md  deployment.md  llm-providers.md  openapi_comprehensive.json  openapi_current.json  runbooks.md  troubleshooting.md
prds/: 000_PPRD|bin2nlp.md  001_FPRD|Multi-Platform_Binary_Analysis_Engine.md
scripts/: aliases.sh  clear_resume  deploy.sh  docker-utils.sh  hk  housekeep.sh  housekeeping.py  test-deployment.sh
src/: cli.py
src/analysis/: engine.py
src/api/: main.py
src/cache/: __init__.py  base.py  job_queue.py  rate_limiter.py  result_cache.py  session.py
src/cli/: __init__.py  admin.py
src/core/: config.py  config_validation.py  exceptions.py  metrics.py  security.py  utils.py
src/database/: __init__.py  connection.py  models.py  operations.py
src/decompilation/: engine.py  r2_session.py
src/llm/: base.py  translation_service.py
src/repositories/: __init__.py  user_llm_providers.py
tasks/: 000_MASTER_TASKS|Decompilation_Service.md  001_FTASKS|Phase1_Integrated_System.md  990_CTASKS|Purge_Focused_Analysis.md
tests/: __init__.py
(+301 files in other folders)
